Your commit message

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 PORT=5000
+REACT_APP_SERVER_DOMAIN=http://localhost:5173/
 MONGOODB_USERNAME=mrshubhamfutane
 MONGODB_PASSWORD=O4Kz88cNI0zy4yLB                           
 MONGODB_URL=mongodb+srv://mrshubhamfutane:O4Kz88cNI0zy4yLB@ecoedan.pxjb5.mongodb.net/USER?retryWrites=true&w=majority&appName=ecoedan
