--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "tailwindcss": "^3.4.10",
+"another-package": "^1.0.0"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -29,7 +32,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
-<<<<<<< HEAD
     "vite": "^5.4.1"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
@@ -37,8 +39,4 @@
   "keywords": [],
   "author": "",
   "license": "ISC"
-=======
-    "vite": "^5.4.8"
-  }
->>>>>>> d9594a8974a4f4939e18c8966ced3120e09d1f19
 }
