--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,6 @@ COPY package.json package-lock.json ./
 RUN npm install
 
 COPY . .
-
 RUN npm run build
 
 # Step 2: Serve using Nginx
@@ -17,10 +16,9 @@ FROM nginx:alpine
 RUN rm -rf /usr/share/nginx/html/*
 
 # Copy built files from React app
-COPY --from=build ./build/ /usr/share/nginx/html/
+COPY --from=build /app/build/ /usr/share/nginx/html/
 
-
-# Copy custom nginx config if you have one (optional)
+# Copy custom nginx config (optional, uncomment if you have it)
 # COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
