--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# Step 1: Build the React app
+# Step 1: Build the Vite React app
 FROM node:18-alpine as build
 
 WORKDIR /app
@@ -12,13 +12,12 @@ RUN npm run build
 # Step 2: Serve using Nginx
 FROM nginx:alpine
 
-# Clean old nginx static assets
 RUN rm -rf /usr/share/nginx/html/*
 
-# Copy built files from React app
-COPY --from=build /app/build/ /usr/share/nginx/html/
+# ✅ Correct path for Vite output
+COPY --from=build /app/dist/ /usr/share/nginx/html/
 
-# Copy custom nginx config (optional, uncomment if you have it)
+# Optional: use custom nginx config
 # COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
