--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,10 @@ COPY package.json package-lock.json ./
 RUN npm install
 
 COPY . .
-RUN npm run build
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+RUN VITE_API_URL=$VITE_API_URL npm run build
+
 
 # Step 2: Serve using Nginx
 FROM nginx:alpine
