Dockerfile are created

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,13 @@ FROM node:18-alpine
 # Set working directory
 WORKDIR /app
 
-# Copy package.json and install dependencies
-COPY package.json package-lock.json ./
+# Copy only package.json and package-lock.json first
+COPY package*.json ./
+
+# Install dependencies inside Docker (this ensures correct native build)
 RUN npm install
 
-# Copy the rest of the code
+# Now copy the rest of your backend code
 COPY . .
 
 # Expose backend port
