--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ PORT="5000"
 REACT_APP_SERVER_DOMAIN="http://localhost:5173/"
 MONGOODB_USERNAME="gardengallery25"
 MONGODB_PASSWORD="gardengallery25"        
-REACT_APP_API_URL="http://13.201.26.192:5000"                 
+VITE_API_URL=http://13.201.26.192:5000                 
 MONGODB_URL="mongodb+srv://gardengallery25:gardengallery25@gardangallaryecommerce.bk80g.mongodb.net/user?retryWrites=true&w=majority&appName=gardanGallaryEcommerce"
 JWT_SECRET=mysecretkey
 EMAIL_USER=gorterushi@example.com
