--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,9 +7,7 @@ COPY package.json package-lock.json ./
 RUN npm install
 
 COPY . .
-ARG VITE_API_URL
-ENV VITE_API_URL=$VITE_API_URL
-RUN VITE_API_URL=$VITE_API_URL npm run build
+RUN npm run build
 
 
 # Step 2: Serve using Nginx
