--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-# VITE_API_URL=http://13.203.120.9:5000 
- VITE_API_URL=http://localhost:5000
+VITE_API_URL=http://13.203.120.9:5000 
+#  VITE_API_URL=http://localhost:5000
 
