--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@ MONGOODB_USERNAME="gardengallery25"
 MONGODB_PASSWORD="gardengallery25"                      
 MONGODB_URL="mongodb+srv://gardengallery25:gardengallery25@gardangallaryecommerce.bk80g.mongodb.net/user?retryWrites=true&w=majority&appName=gardanGallaryEcommerce"
 JWT_SECRET=mysecretkey
-
+VITE_API_URL=http://a0d944e87cb974cd191def425b715ee5-537237185.ap-south-1.elb.amazonaws.com:5000
