--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,9 @@ COPY package.json package-lock.json ./
 RUN npm install
 
 COPY . .
+
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
 RUN npm run build
 
 
@@ -15,11 +18,8 @@ FROM nginx:alpine
 
 RUN rm -rf /usr/share/nginx/html/*
 
-# ✅ Correct path for Vite output
 COPY --from=build /app/dist/ /usr/share/nginx/html/
-
-# Optional: use custom nginx config
-# COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/nginx.conf  # Optional for routing
 
 EXPOSE 80
 
