Cart fetching url are changed

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 # VITE_API_URL=http://13.203.120.9:5000 
-#  VITE_API_URL=http://localhost:5000
-  VITE_API_URL=http://a0d944e87cb974cd191def425b715ee5-537237185.ap-south-1.elb.amazonaws.com:5000
+ VITE_API_URL=http://localhost:5000
+  # VITE_API_URL=http://a0d944e87cb974cd191def425b715ee5-537237185.ap-south-1.elb.amazonaws.com:5000
 
